# regrex

./: pyproject.toml  requirements.txt
docs/: readme.md
src/: cli.py
